Boite modale pour la demande d'inscription

--- a/templates/home/partials/modal.html.twig
+++ b/templates/home/partials/modal.html.twig
@@ -9,9 +9,10 @@
         </div>
         <div class="modal-body">
            <div class="row text-center">
-                <p>Faites nous un <pre>Hello world</pre> via cette adresse
+                <p class="text-bold  ml-2 mr-2">Faites nous un mail via cette adresse
                 <a href="mailto:yusufheri64@gmail.com?cc=yheri@enywork.com&subject=Souscription
-                &body=Obtenir%20SMS%20gratuits">yusufheri64@gmail.com</a>  pour obtenir 10 SMS gratuits maintenant en vous envoyant votre <b>login</b></p>
+                &body=Obtenir%20SMS%20gratuits">yusufheri64@gmail.com</a>. 
+                Et  nous vous enverrons votre <b>login</b></p>
             </div>
         </div>
         <div class="modal-footer">
