Search contact & Gestion des rôles utilisateurs

--- a/templates/dashboard/account/new.html.twig
+++ b/templates/dashboard/account/new.html.twig
@@ -26,7 +26,7 @@
                                         </div>
                                     </div>
                                 {% endfor %}
-                                <h2>Création d'un nouvel utilisateur </h2>
+                                <h2>Création d'un compte secondaire </h2>
                                 <hr>
                                 {{ form_start(form) }}                            
 
