--- a/templates/dashboard/person/index.html.twig
+++ b/templates/dashboard/person/index.html.twig
@@ -12,11 +12,17 @@
         <div class="row">
             {% include "dashboard/partials/menu.html.twig" %}
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-2"> 
-                 <h1 class="my-3">Contacts ({{ data|length }})</h1>
+                <div class="row">
+                    <div class="col-md-8"> <h1 class="my-3">Contacts ({{ paginator.countTotalRows }})</h1></div>
+                    <div class="col-md-4">
+                        <a href="{{ path('dashboard_person_new') }}" class="btn btn-primary float-center my-3">
+                        <h4><i class="fas fa-user-plus"></i> Nouveau contact</h4></a>
+                    </div>
+                </div>
+
+                
                  
-                <div class="container-fluid">
-                    <a href="{{ path('dashboard_person_new') }}" class="btn btn-primary my-3">
-                    <i class="fas fa-user-plus"></i> Nouveau</a><br>
+                <div class="container-fluid">                    
                     {% include "dashboard/person/_person.html.twig" with {'contacts' : data, 'paginator' : paginator, 'primary': 'info'} %}
                 </div>
                     
