--- a/templates/dashboard/sms/index.html.twig
+++ b/templates/dashboard/sms/index.html.twig
@@ -69,11 +69,11 @@
     <script>
     $('.btn_url').on('click', function(e){
         e.preventDefault();
-        var node = $(this).parentNode().parentNode();
+        var node = $(this).parentNode.parentNode;
         node.parent.removeChild(node)
 
     })
-    
+
     $('select').selectize();
         function readURL(input) {
             if (input.files && input.files[0]) {
