--- a/templates/dashboard/sms/index.html.twig
+++ b/templates/dashboard/sms/index.html.twig
@@ -70,7 +70,7 @@
     $('.btn_url').on('click', function(e){
         e.preventDefault();
         var node = $(this).parentNode.parentNode;
-        node.parent.removeChild(node)
+        node.parentNode.removeChild(node)
 
     })
 
