--- a/templates/dashboard/sms/index.html.twig
+++ b/templates/dashboard/sms/index.html.twig
@@ -69,8 +69,9 @@
     <script>
     $('.btn_url').on('click', function(e){
         e.preventDefault();
-        var node = $(this).parentNode.parentNode;
-        node.parentNode.removeChild(node)
+        //var node = $(this).parentNode.parentNode;
+        //node.parentNode.removeChild(node)
+        $(this).parentNode.hide()
 
     })
 
