--- a/templates/dashboard/sms/index.html.twig
+++ b/templates/dashboard/sms/index.html.twig
@@ -71,7 +71,7 @@
         e.preventDefault();
         //var node = $(this).parentNode.parentNode;
         //node.parentNode.removeChild(node)
-        $(this).parentNode.hide()
+        $(this).hide()
 
     })
 
