--- a/templates/dashboard/sms/index.html.twig
+++ b/templates/dashboard/sms/index.html.twig
@@ -68,7 +68,7 @@
     {{ encore_entry_script_tags('js/dashboard') }}   
     <script>
     $('.btn_url').on('click', function(e){
-        e.preventDefault();
+        //  e.preventDefault();
         //var node = $(this).parentNode.parentNode;
         //node.parentNode.removeChild(node)
         $(this).hide()
