Feat: Typing text animation

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -69,6 +69,7 @@
 {% block javascripts %}
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/jquery-ui.js"></script>
+  {{ encore_entry_script_tags('js/typed') }}
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
@@ -81,4 +82,5 @@
 
     
     <script src="js/main.js"></script>
+    
 {% endblock %}
