--- a/templates/home/partials/title.html.twig
+++ b/templates/home/partials/title.html.twig
@@ -8,7 +8,7 @@
 
             <div class="row mb-4" data-aos="fade-up" data-aos-delay="200">
               <div class="col-lg-6 mr-auto">
-                <h1>Communiquez-vous autrement</h1>
+                <h1 class="h2 typing"></h1>
                 <p class="mb-5">
                 Envoyez et récevez des SMS dans plus de 200 pays au monde grâce à notre service.</p>
                
